CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(OSRequirment)
set (CMAKE_CXX_STANDARD 11)
SET(IncludedFiles includes/defs.h includes/headers.h includes/process_struct.h includes/clkUtilities.h includes/queueUtilities.h includes/generic_queue.h includes/process_queue.h)
SET (ProcessGeneratorSourceFiles src/processGenerator.c src/generic_queue.c src/process_queue.c)
SET(ProcessSourceFiles src/process.c)
SET(SchedulerSourceFiles src/scheduler.c)
SET(ClockSourceFiles src/clk.c includes/generic_queue.h src/generic_queue.c)
SET(FilesGeneratorSourceFiles src/FilesGenerator.c)
add_executable(clock ${IncludedFiles} ${ClockSourceFiles})
add_executable(processGenerator ${IncludedFiles} ${ProcessGeneratorSourceFiles})
add_executable(process ${IncludedFiles} ${ProcessSourceFiles})
add_executable(scheduler ${IncludedFiles} ${SchedulerSourceFiles})
add_executable(filesGenerator ${IncludedFiles} ${FilesGeneratorSourceFiles})
include_directories(${CMAKE_ROOT_DIRECTORY} includes)